--- a/README
+++ b/README
@@ -1,22 +1,38 @@
-Install:
+# software.opensuse.org
 
-sudo zypper in rubygem-rails-2_3 rubygem-sqlite3 rubygem-gettext_rails rubygem-nokogiri memcached
+Ruby on Rails application powering
+[https://software.opensuse.org](https://software.opensuse.org)
 
-Additional gems either from devel:languages:ruby:extensions (incompatible atm) or rubygems:
-daemons, mongrel, ruby-debug, delayed_job (1.8.4), capistrano
+## Installing dependencies in a (open)SUSE system
 
+Add the
+[openSUSE:infrastructure:software.opensuse.org](https://build.opensuse.org/project/show/openSUSE:infrastructure:software.opensuse.org)
+repository to your system
+```
+zypper ref
+zypper in software_opensuse_org-deps
+```
 
-cat > config/database.yml <<EOF
-development:
-  adapter: sqlite3
-  database: db/development.sqlite3
-  pool: 5
-  timeout: 5000
-EOF
+In other systems, use the regular Ruby on Rails mechanisms to install
+dependencies (i.e. Bundler)
 
-rake db:migrate
+## Running the application locally
 
+Just for running it in development mode. If you are playing to deploy it in a
+server, please apply good Ruby on Rails practices.
+
+```bash
+git clone git@github.com:openSUSE/software-o-o.git
+cd software-o-o
 git submodule init
 git submodule update
 
-./script/server
+cp database.yml.example database.yml
+cp options.yml.example options.yml
+cp secrets.yml.example secrets.yml
+rake db:migrate
+
+rails server
+```
+
+Enjoy your software.opensuse.org clone at http://localhost:3000/
